--- a/app/views/channels/my_channel/_ilybytricio.html.haml
+++ b/app/views/channels/my_channel/_ilybytricio.html.haml
@@ -1,6 +1,6 @@
-%nav.navbar.bg-dark
+%nav.navbar.bg-ily
 	.container
-		%a.navbar-brand{href: "#", style: "color: gold"} 
+		%a.navbar-brand{href: "#"} 
 			%img{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.png", width: "10%", alt: ""}
 			ILY by Tricio
 .container-xl.pt-4
