--- a/app/views/content/blocks/_paragraph.html.haml
+++ b/app/views/content/blocks/_paragraph.html.haml
@@ -13,5 +13,5 @@
 			%button.btn.btn-outline-dark{type: "button", data: {content_block_target: "toolbarP"}}
 				%i.bi.bi-paragraph
 					
-	%p{contenteditable: true, data: { content_block_target: "contentBlock"}} 
-		You are position #{@position} in this content. You can go to <a href="https://www.facebook.com" target: "_blank">Facebook</a> in a new tab.
+	%p{contenteditable: true, data: { action: "focus->content-block#showToolbox focusout->content-block#hideToolbox", content_block_target: "contentBlock"}} 
+		
