--- a/app/views/channels/my_channel/special_event.html.haml
+++ b/app/views/channels/my_channel/special_event.html.haml
@@ -2,7 +2,7 @@
 	.container
 		%a.navbar-brand{href: "#"} 
 			%img{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.png", width: "10%", alt: ""}
-			ILY by Tricio
+			%span.brand-ily ILY by Tricio
 %main.container-xl.pt-4
 	.d-flex
 		.border.border-dark{aria: {hidden: "true"}}
