made changes for consistency

--- a/app/views/channels/my_channel/special_event.html.haml
+++ b/app/views/channels/my_channel/special_event.html.haml
@@ -87,7 +87,7 @@
 	%section.text-center.mt-4
 		%h2 Menu
 		.col-12.col-md-8.mx-auto
-			%p A delicious spread of salad, pasta cooked on-site, sauces, meatballs, dinner rolls and dessert.  The sauces aren't mixed with the pasta ahead of time, so you get to choose as we make your plate.
+			%p.text-muted A delicious spread of salad, pasta cooked on-site, sauces, meatballs, dinner rolls and dessert.  The sauces aren't mixed with the pasta ahead of time, so you get to choose as we make your plate.
 		.row
 			.col-12.col-md-4.card
 				.card-body
