fixed two issues

--- a/app/views/channels/my_channel/special_event.html.haml
+++ b/app/views/channels/my_channel/special_event.html.haml
@@ -35,7 +35,7 @@
 			%h2 Registration
 			%p Deadline to register: <br>Friday, April 14, 2023
 			.row
-				%a.btn.btn-dark.btn-lg.m-4{href: "https://docs.google.com/forms/d/e/1FAIpQLSf_XIetNb3nvdsfap0Fu9OSg12xXwao6_cJ16v0lRt3InkOCw/viewform", target: "_blank", role: "button"}} Register Now
+				%a.btn.btn-dark.btn-lg.m-4{href: "https://docs.google.com/forms/d/e/1FAIpQLSf_XIetNb3nvdsfap0Fu9OSg12xXwao6_cJ16v0lRt3InkOCw/viewform", target: "_blank", role: "button"} Register Now
 			
 			%h2 Address
 			.row
@@ -57,7 +57,7 @@
 				Contact  
 				%a{href: "mailto:umncobo@gmail.com?subject=April 22 Dinner Fundraiser Inquiry", data: {controller: "bootstrap", bs: {toggle: "tooltip", placement: "top", title: "Opens mail client"}}}
 					%span UMNCoBo Committee
-					%span.visually-hidden
+					%span.visually-hidden (opens mail client)
 					%i.bi.bi-envelope{aria: {hidden: "true"}}
 
 
