--- a/app/views/channels/my_channel/special_event.html.haml
+++ b/app/views/channels/my_channel/special_event.html.haml
@@ -92,7 +92,7 @@
 
 	%section.text-center.mt-4
 		%h2 Menu
-		.col-12.col-lg-10.mx-auto
+		.col-12.col-lg-10.col-xl-8.mx-auto
 			%p.text-muted A delicious spread of salad, pasta cooked on-site, sauces, meatballs, dinner rolls and dessert.  The sauces aren't mixed with the pasta ahead of time, so you get to choose as we make your plate.
 		.row
 			.col-12.col-md-4.card
@@ -133,7 +133,7 @@
 			
 	%section
 		%h2.text-center Pre-Order Your Cookies today!
-		%p.col-12.col-lg-10.mx-auto.text-center.text-muted These cookies will be available for pickup at the ILY Benefit Dinner with the University of Minnesota's Deaf College Bowl at Dendros Group, LLC's office on Saturday, April 22nd, 2023.
+		%p.col-12.col-lg-10.col-xl-8.mx-auto.text-center.text-muted These cookies will be available for pickup at the ILY Benefit Dinner with the University of Minnesota's Deaf College Bowl at Dendros Group, LLC's office on Saturday, April 22nd, 2023.
 		.row.mb-4
 			.col-12.col-md-6.col-lg-4.mt-4.mx-auto
 				.card
