contrast adjusted for logo

--- a/app/views/channels/my_channel/special_event.html.haml
+++ b/app/views/channels/my_channel/special_event.html.haml
@@ -1,7 +1,7 @@
 %nav.navbar.bg-ily
 	.container
 		%a.navbar-brand{href: "#"} 
-			%img{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.png", width: "10%", alt: ""}
+			%img{src: "https://storage.googleapis.com/dbsan-public/ILY%20by%20Tricio.png", width: "10%", alt: "", style: "background: #606060"}
 			%span.brand-ily ILY by Tricio
 %main.container-xl.pt-4
 	.d-flex
