--- a/app/views/channels/my_channel/special_event.html.haml
+++ b/app/views/channels/my_channel/special_event.html.haml
@@ -20,7 +20,7 @@
 					%i.bi.bi-window-plus{aria: {hidden: "true"}}
 				and 
 				%a{href: "https://www.facebook.com/UMNCoBo", target: "_blank", data: {controller: "bootstrap", bs: {toggle: "tooltip", placement: "bottom", title: "Opens in new tab"}}}
-					%span University of Minnesota Deaf College bowl Program 
+					%span University of Minnesota Deaf College Bowl Program 
 					%span.visually-hidden (opens in a new tab)
 					%i.bi.bi-window-plus{aria: {hidden: "true"}}
 			
