--- a/app/views/surveys/edit.html.haml
+++ b/app/views/surveys/edit.html.haml
@@ -9,5 +9,5 @@
 		= render partial: "sidebar", locals: {survey: @survey}
 		.col-md-9.p-4
 			= render partial: "surveys/basic_info/title", locals: {survey: @survey}
-			
+			= render partial: "surveys/basic_info/slug", locals: {survey: @survey}
 					
