--- a/app/views/surveys/edit.html.haml
+++ b/app/views/surveys/edit.html.haml
@@ -4,7 +4,7 @@
 			%h1 #{@survey.title}
 		.p-2
 			.row.p-2
-				= link_to "View", survey_path(@survey), class: "btn btn-lg btn-dark", role: "button"
+				= link_to "View", survey_path(@survey, slug: @survey.slug), class: "btn btn-lg btn-dark", role: "button"
 	.row
 		= render partial: "sidebar", locals: {survey: @survey}
 		.col-md-9.p-4
