--- a/app/views/surveys/_sidebar.html.haml
+++ b/app/views/surveys/_sidebar.html.haml
@@ -2,8 +2,8 @@
 	= link_to "Basic Info", edit_survey_path(slug: survey.slug), class: "d-block p-2 text-light nav-link border border-light m-2 w-100"
 	- if survey.sections.count > 0
 		- survey.sections.each do |s|
-			= link_to "#{s.section_number}. #{s.title}", edit_survey_section_path(@survey, s), class: "d-block p-2 text-light nav-link border border-light m-2 w-100"
+			= link_to "#{s.section_number}. #{s.title}", edit_survey_section_path(survey_slug: @survey.slug, sec_num: s.section_number), class: "d-block p-2 text-light nav-link border border-light m-2 w-100"
 	
 
-	= button_to "Add Section", survey_sections_new_path(survey.id), class: "d-block p-2 text-light nav-link border border-light m-2 w-100 bg-dark text-light text-start"
+	= button_to "Add Section", survey_sections_path(survey_slug: survey.slug), class: "d-block p-2 text-light nav-link border border-light m-2 w-100 bg-dark text-light text-start"
 			
