--- a/app/views/surveys/basic_info/_edit_slug.html.haml
+++ b/app/views/surveys/basic_info/_edit_slug.html.haml
@@ -1,5 +1,5 @@
 %turbo-frame{id: "slug", data:{turbo: {action: "advance"}}}
-	= form_with(model: survey) do |f|
+	= form_with(model: survey, url: survey_path(slug: survey.slug)) do |f|
 		.input-group.mb-4
 			.form-floating
 				- if survey.slug.nil?
