--- a/app/views/surveys/sections/edit.html.haml
+++ b/app/views/surveys/sections/edit.html.haml
@@ -8,7 +8,7 @@
 	.row
 		= render partial: "surveys/sidebar", locals: {survey: @survey}
 		.col-md-9.p-4
-			= form_with(model: @section, url: survey_section_path(@survey)) do |f|
+			= form_with(model: @section, url: survey_section_path(survey_slug: @survey.slug, sec_num: @section.section_number)) do |f|
 				%h2 #{@section.section_number}. #{@section.title}
 				.form-floating.mb-4
 					= f.text_field :title, placeholder: "Section Title", class: "form-control border border-dark"
